test/errors/include/ri2.asm
; recursive include file2
label  lda #2
    .include ri3.asm